--- a/index.html
+++ b/index.html
@@ -40,3 +40,8 @@ description: "一生只想过简单的生活"
     {% endif %}
 </ul>
 {% endif %}
+<script>
+!(function(c,b,d,a){c[a]||(c[a]={});c[a].config={pid:"djxsre0kh6@d6b8ca168a750ba",imgUrl:"https://arms-retcode.aliyuncs.com/r.png?"};
+with(b)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("crossorigin","",src=d)
+})(window,document,"https://retcode.alicdn.com/retcode/bl.js","__bl");
+</script>
